Code audit fixes: path traversal, Gson consolidation, JDK 25 idioms, caches, tests
Security: apply resolveContained() to all skill name URL parameters in
ApiSkillsController to prevent directory traversal via ../

JDK 25: replace get(0) with getFirst() at 7 call sites (sequenced
collections); consolidate 9 new Gson() instances to GsonHolder.INSTANCE.

Performance: bound AgentService.fileCache (500) and SkillLoader.skillCache
(100) with LRU eviction; cache parsed shell allowlist as Set<String> in
ShellExecTool for O(1) lookup.

Clean code: extract SkillVersionManager from SkillLoader (version/diff/hash
concerns); extract writeSse() helper in ApiChatController to deduplicate 5
identical SSE writer lambdas.

Tests: add AgentRunnerCoreTest (6 tests covering provider error, simple
completion, tool-call loop, truncation, max rounds, queuing, LLM failure)
and TaskPollerJobTest (6 tests covering findPendingDue filter, onSuccess,
exponential backoff formula, max-retries, CRON re-scheduling, shutdown).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>